# backend

./: .env  manage.py  pyproject.toml  test_api.py
pomodoro/: models.py
pomodoro/migrations/: 0001_initial.py
pomodoro_api/: api.py  asgi.py  settings.py  urls.py  wsgi.py
pomodoro_api/routers/: __init__.py  analytics.py  auth.py  pomodoro.py  tasks.py
tasks/: models.py  tests.py
tasks/migrations/: 0001_initial.py
users/: models.py
users/migrations/: 0001_initial.py
